feat: add i18 plugin

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@tailwindcss/cli": "^4.1.4",
         "@tailwindcss/vite": "^4.1.4",
         "@vueuse/core": "^13.1.0",
-        "pinia": "^3.0.2"
+        "pinia": "^3.0.2",
+        "vue-i18n": "^11.1.3"
     }
 }
