--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@types/node": "^22.14.1",
+        "@types/node": "^22.15.3",
         "@typescript-eslint/eslint-plugin": "^8.31.0",
         "@typescript-eslint/parser": "^8.31.0",
         "@vitejs/plugin-vue": "^5.2.3",
         "@vue/compiler-sfc": "^3.5.13",
+        "@vue/tsconfig": "^0.7.0",
         "autoprefixer": "^10.4.21",
         "axios": "^1.9.0",
         "eslint": "^9.25.1",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.2.6",
         "eslint-plugin-vue": "^10.0.0",
+        "json5": "^2.2.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.5.3",
         "prettier": "^3.5.3",
-        "tailwindcss": "^4.1.4",
+        "tailwindcss": "^4.1.5",
         "typescript": "^5.8.3",
         "vite": "^5.0.0",
+        "vite-plugin-json5": "^1.1.9",
         "vue-tsc": "^2.2.8"
     },
     "dependencies": {
@@ -33,6 +36,7 @@
         "@tailwindcss/vite": "^4.1.4",
         "@vueuse/core": "^13.1.0",
         "pinia": "^3.0.2",
-        "vue-i18n": "^11.1.3"
+        "vue": "^3.5.13",
+        "vue-i18n": "^9.14.4"
     }
 }
