--- a/resources/js/locales/zh-CN.json5
+++ b/resources/js/locales/zh-CN.json5
@@ -3,6 +3,8 @@
     home: '首页',
     about: '关于',
     contact: '联系我们',
+    logout: '退出登录',
+    login: '登录',
   },
   welcome: {
     title: '欢迎使用多语言支持',
@@ -19,5 +21,33 @@
   contact: {
     title: '联系我们',
     description: '如有任何疑问，请随时与我们联系。',
+  },
+  auth: {
+    login: {
+      title: '登录账户',
+      email: '电子邮箱',
+      password: '密码',
+      submit: '登录',
+      loading: '登录中...',
+      failed: '登录失败，请检查您的凭据',
+      noAccount: '还没有账户?',
+      register: '注册新账户',
+    },
+    register: {
+      title: '注册账户',
+      name: '姓名',
+      email: '电子邮箱',
+      password: '密码',
+      confirmPassword: '确认密码',
+      submit: '注册',
+      loading: '注册中...',
+      failed: '注册失败，请检查您的输入',
+      haveAccount: '已有账户?',
+      login: '登录',
+    },
+    logout: {
+      confirm: '您确定要退出登录吗？',
+      success: '您已成功退出登录。',
+    },
   },
 }
